ini update sabtu

--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -13,8 +13,20 @@ body {
   margin: 5px 0;
 }
 
+
 .theme-showcase .navbar .container {
   width: auto;
+}
+
+/* gambar atas */
+.gambare {
+    background-image: url("/theme/img/sesuatu.jpg");
+    margin-top: -100px;
+}
+
+/* login */
+.well.signin {
+    margin-top: 150px;
 }
 /* footer */
 
